# flash-card-generator

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
learning/: __main__.py  flash_card.py  reader.py
learning/clients/: __init__.py  command_line.py  web.py
learning/pre_processors/: __init__.py
learning/pre_processors/subtitles/: __init__.py  ttml2.py
learning/processors/: __init__.py  english.py  french.py  german.py
tests/: conftest.py
tests/clients/: test_web.py
tests/pre_processors/: test_ttml2.py
tests/processors/: test_german.py
