[tool.poetry]
name = "flash-card-generator"
version = "0.1.0"
description = ""
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.7"
click = "^7.0"
flask = "^1.0"
googletrans = "^2.4"
marshmallow = "^2.17"
lxml = "^4.2"
spacy = "^2.0"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
ipdb = "^0.11.0"
ipython = "^7.2"
mypy = "^0.650.0"
pytest = "^4.0"
pylint = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
